--- a/kurikinton/css/style.css
+++ b/kurikinton/css/style.css
@@ -339,16 +339,22 @@ footer address {
     display: flex;
     background-color: white;
     box-shadow: 0px 0px 15px #33313187;
-    margin: 20px 0;
+    margin: 20px auto;
 }
 
-
-/* .content_kaki_left img {
-    width: %;
-} */
+.content_kaki_left {
+    width: 100%;
+    height: auto;
+}
 
 .content_kaki_right {
+    width: 50%;
     padding: 10px;
+}
+
+.content_kaki_right p {
+    /*     font-size:0.8em; */
+    line-height: 1.3em;
 }
 
 .btn-gradient-3d {
@@ -388,6 +394,7 @@ footer address {
 }
 
 .btn-square-emboss:active {
+    /*Ã£Æ’Å“Ã£â€šÂ¿Ã£Æ’Â³Ã£â€šâ€™Ã¦Å Â¼Ã£Ââ€”Ã£ÂÅ¸Ã£ÂÂ¨Ã£ÂÂ*/
     -webkit-transform: translateY(4px);
     transform: translateY(4px);
     box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
@@ -428,6 +435,7 @@ footer address {
     background: linear-gradient(0deg, rgba(247, 196, 152, 0.5) 0%, #c9ddbf 99.98%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#C9DDBF', endColorstr='#F7C498', GradientType=0);
     /* color: #573016; */
+    */
     /*     padding-bottom: 2px;
     border-bottom: 5px solid #C1B85E; */
     /* font-size: 1.3rem; */
