--- a/kurikinton/css/style.css
+++ b/kurikinton/css/style.css
@@ -345,7 +345,7 @@ footer address {
 .flex {
     display: flex;
     display: -ms-flex;
-    display: -webkit-flex;
+    /* display: -webkit-flex; */
 }
 
 .page_top main {
@@ -368,7 +368,7 @@ footer address {
     display: flex;
     justify-content: space-between;
     font-family: 'Noto Serif JP';
-    font-size: : 80%;
+    font-size: 80%;
     line-height: 1.2em;
 }
 
@@ -430,6 +430,39 @@ footer address {
     font-family: 'Noto Serif JP';
     margin-bottom: 0.5em;
 }
+
+
+/* ショップエリア */
+
+.shop_area {
+    padding: 30px 15px;
+    box-shadow: 3px 0 8px #ccc, -3px 0 8px #ccc;
+    position: relative;
+}
+
+.shop_area div p,
+.shop_area div img {
+    width: 50%;
+}
+
+@media screen and (min-width: 768px) {
+    .shop_area>img,
+    .shop_area div p {
+        width: 60%;
+    }
+    .shop_area div img {
+        width: 35%;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    .shop_area .btn_link-entry {
+        margin-top: 60px;
+    }
+}
+
+
+/* ショップエリアここまで */
 
 .page_top .content_startBuy {
     background-color: #F5E8C9;
@@ -788,10 +821,27 @@ footer address {
 }
 
 .content_btn_p {
-    font-size: -2.5em;
+    letter-spacing: 0;
+    font-size: 1.5rem;
     font-family: 'Noto Serif JP', serif;
     margin-bottom: -14%;
     font-weight: bold;
+}
+
+@media screen and (min-width: 768px) {
+    .content_btn_p {
+        font-size: 2.2rem;
+    }
+}
+
+.content_btn_p .small {
+    font-size: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+    .content_btn_p .small {
+        font-size: 1.8rem;
+    }
 }
 
 .content_entry .content_entry-inner {
@@ -823,12 +873,12 @@ footer address {
     margin-bottom: 5%;
 }
 
-.content_entry .btn_link-entry a {
+.btn_link-entry a {
     display: block;
     background-color: #B1001E;
     width: 100%;
     margin: 2% auto 1%;
-    padding: 4% 0;
+    padding: 4% 0px;
     border: none;
     border-radius: 10px;
     box-shadow: 0px 5px #77001A;
@@ -847,22 +897,25 @@ footer address {
     }
 }
 
-.content_entry .btn_link-entry a span {
+.btn_link-entry a>span {
     padding-right: 30px;
     background: url("../images/common/ico_cart-01.svg") no-repeat center right;
     background-size: 23px;
     font-weight: 900;
     letter-spacing: 0.05em;
+    font-size: 1.5rem;
+    padding-right: 24px;
 }
 
 @media screen and (min-width: 768px) {
-    .content_entry .btn_link-entry a span {
+    .btn_link-entry a>span {
         padding-right: 52px;
         background-size: 42px;
+        font-size: 3rem;
     }
 }
 
-.content_entry .btn_link-entry a:active {
+.btn_link-entry a:active {
     -webkit-transform: translateY(5px);
     transform: translateY(5px);
     /*下に動く*/
@@ -870,14 +923,14 @@ footer address {
 }
 
 @media screen and (min-width: 768px) {
-    .content_entry .btn_link-entry a:active {
+    .btn_link-entry a:active {
         -webkit-transform: translateY(10px);
         transform: translateY(10px);
         /*下に動く*/
     }
 }
 
-.content_entry .btn_link-entry a:hover {
+.btn_link-entry a:hover {
     cursor: pointer;
     opacity: 1;
     -webkit-transform: translateY(5px);
@@ -887,30 +940,30 @@ footer address {
 }
 
 @media screen and (min-width: 768px) {
-    .content_entry .btn_link-entry a:hover {
+    .btn_link-entry a:hover {
         -webkit-transform: translateY(10px);
         transform: translateY(10px);
         /*下に動く*/
     }
 }
 
-.content_entry .btn_link-tel {
+.btn_link-tel {
     margin-bottom: 3%;
 }
 
-.content_entry .btn_link-tel a {
+.btn_link-tel a {
     display: block;
     line-height: 1;
 }
 
-.content_entry .btn_link-tel a img {
+.btn_link-tel a img {
     width: 100%;
     text-align: center;
     line-height: 1;
 }
 
 @media screen and (min-width: 768px) {
-    .content_entry .btn_link-tel a:hover {
+    .btn_link-tel a:hover {
         opacity: 1;
     }
 }
