--- a/kurikinton/css/style.css
+++ b/kurikinton/css/style.css
@@ -451,6 +451,7 @@ footer address {
 .content_read.yaki {
     font-family: 'Noto Serif JP';
     background-image: url("../images/top/bg_main-01.jpg");
+    padding-bottom: 30px;
 }
 
 .content_read.yaki p {
@@ -501,12 +502,21 @@ footer address {
 /* 栗ごころ　ここから */
 
 .content_read.kurigokoro {
-    text-align: center;
     font-family: 'Noto Serif JP';
+    background: url(../images/top/bg_check.png), linear-gradient(90deg, rgb(244 220 126 / 50%) 0%, rgb(255 255 255) 20%, rgb(255 254 253) 53.83%, rgb(254 252 246) 68.74%, rgb(253 249 233) 79.93%, rgb(253 249 233) 80%, rgb(252 247 226 / 89%) 83.16%, rgb(251 242 205 / 72%) 87.87%, rgb(248 233 172 / 53%) 93.54%, rgb(244 220 127 / 30%) 99.92%, rgb(244 220 126 / 50%) 100%), linear-gradient(45deg, rgb(255 254 254) 25%, rgb(0 0 0 / 0%) 25%);
+    /* filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#F4DC7E', endColorstr='#F4DC7E', GradientType=1); */
+    /* margin-top: 30px; */
+    padding: 30px 0;
 }
+
+
+/* .content_read.kurigokoro .content-wrap {
+    background-image: url(../images/top/bg_main-02.jpg);
+} */
 
 .kurigogoro_tit,
 .kurigogoro_tit span {
+    text-align: center;
     font-weight: bold;
     font-size: 2.2rem;
     line-height: 50px;
@@ -532,99 +542,139 @@ footer address {
     }
 }
 
+.content_read.kurigokoro p {
+    margin-bottom: 30px;
+}
+
 
 /* 栗こころ　ここまで */
 
+
+/* ここから和栗菓子二種セット */
+
+.content_read.set {
+    background: linear-gradient(180deg, rgba(83, 0, 0, 1) 27.77%, rgba(173, 0, 6, 0.6) 98.83%);
+    padding-bottom: 30px;
+}
+
+.set_tit {
+    font-family: 'Noto Serif JP';
+    text-align: center;
+    font-weight: bold;
+    font-size: 2.2rem;
+    line-height: 50px;
+    color: white;
+    line-height: 3.5rem;
+    margin-bottom: 30px;
+}
+
+.set_tit span {
+    text-decoration: overline;
+    text-decoration-thickness: 1px;
+}
+
+.content_read.set p {
+    text-align: center;
+    font-family: 'Noto Serif JP';
+    color: white;
+    font-size: 1.8rem;
+    margin-bottom: 30px;
+    line-height: 2.9rem;
+}
+
+.content_read.set .content_entry_flex p {
+    color: black;
+    text-align: left;
+    font-size: 1.6rem;
+}
+
+@media screen and (min-width: 768px) {
+    .set_tit {
+        font-size: 4.4rem;
+        line-height: 6.9rem;
+        ;
+    }
+    .content_read.set p {
+        font-size: 3rem;
+        line-height: 3.7rem;
+    }
+}
+
+
+}
 .page_top .content_startBuy {
     background-color: #F5E8C9;
     padding: 2% 0;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_startBuy {
         padding: 20px 0;
     }
 }
-
 .page_top .content_report {
     padding: 4% 0 2%;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report {
         padding: 40px 0 10px;
     }
 }
-
 .page_top .content_report h2 {
     margin-bottom: 3%;
 }
-
 .page_top .content_report .report_main {
     position: relative;
     margin: 0 auto 3%;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report .report_main {
         margin: 0 auto 30px;
     }
 }
-
 .page_top .content_report .report_main .report_main-img {
     max-width: 750px;
     margin: 0 auto;
     position: relative;
 }
-
 @media screen and (max-width: 768px) {
     .page_top .content_report .report_main .report_main-img {
         width: 90%;
     }
 }
-
 .page_top .content_report .report_main .report_main-tit {
     position: absolute;
     top: -1%;
     left: -2%;
 }
-
 .page_top .content_report .report_main .report_main-tit img {
     width: 75%;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report .report_main .report_main-tit img {
         width: 558px;
     }
 }
-
 .page_top .content_report .report_main .report_main-txt {
     color: #000;
     margin-top: 0.5em;
     font-size: 1.1rem;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report .report_main .report_main-txt {
         font-size: 1.6rem;
     }
 }
-
 .page_top .content_report .report-inner {
     margin-bottom: 4%;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report .report-inner {
         margin-bottom: 40px;
     }
 }
-
 .page_top .content_report .report-inner h3 {
     margin-bottom: 2%;
 }
-
 .page_top .content_report .report-inner h4 {
     color: #31A129;
     margin-bottom: 0.5em;
@@ -632,112 +682,91 @@ footer address {
     font-weight: 900;
     line-height: 1.36;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report .report-inner h4 {
         font-size: 3.2rem;
     }
 }
-
 .page_top .content_report .report-inner p {
     color: #000;
     font-size: 1.2rem;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report .report-inner p {
         font-size: 1.7rem;
     }
 }
-
 .page_top .content_report .report-inner .report-inner_left {
     width: 44%;
     margin-right: 4%;
 }
-
 .page_top .content_report .report-inner .report-inner_right {
     width: 52%;
 }
-
 .page_top .content_report .report-inner .report-inner_right .mb_plus {
     margin-bottom: 1.5em;
 }
-
 @media screen and (max-width: 768px) {
     .page_top .content_report .report-inner .report-inner_right {
         margin-bottom: 1em;
     }
 }
-
 .page_top .content_report figure {
     margin-bottom: 4%;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report figure {
         margin-bottom: 40px;
     }
 }
-
 .page_top .content_report figure figcaption {
     color: #000;
     margin-top: 0.5em;
     font-size: 1.1rem;
     line-height: 1.45;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report figure figcaption {
         font-size: 1.6rem;
     }
 }
-
 .page_top .content_report .report-2photo {
     margin-bottom: 4%;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report .report-2photo {
         margin-bottom: 40px;
     }
 }
-
 .page_top .content_report .report-2photo dl {
     width: 48%;
     margin-right: 4%;
 }
-
 .page_top .content_report .report-2photo dl:nth-child(2n) {
     margin-right: 0;
 }
-
 .page_top .content_report .report-2photo dl dt {
     margin-bottom: 0.5em;
     width: 100%;
 }
-
 .page_top .content_report .report-2photo dl dd {
     font-size: 1.1rem;
     line-height: 1.4;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_report .report-2photo dl dd {
         font-size: 1.6rem;
     }
 }
-
 .page_top .content_shop {
     background-color: #DFEBD9;
     padding: 4% 0;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_shop {
         padding: 40px 0;
     }
 }
-
 .page_top .content_shop h2 {
     text-align: center;
     background: url("../images/top/bg_line-02.svg") no-repeat center bottom;
@@ -747,35 +776,29 @@ footer address {
     font-size: 1.6rem;
     font-weight: 700;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_shop h2 {
         font-size: 2.8rem;
     }
 }
-
 .page_top .content_shop .shop-inner .shop-img {
     width: 48%;
     margin-right: 4%;
 }
-
 .page_top .content_shop .shop-inner .shop-txt {
     width: 48%;
     font-size: 1.2rem;
     margin-top: 0;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_shop .shop-inner .shop-txt {
         font-size: 1.8rem;
         margin-top: 1em;
     }
 }
-
 .page_top .content_shop .shop-inner .shop-txt p {
     margin-bottom: 0.5em;
 }
-
 
 /* 
       .page_top .content_shopping h2 {
@@ -785,34 +808,28 @@ footer address {
         font-size: 1.2rem;
         font-weight: 700;
     } */
-
 .page_top .content_shopping {
     padding: 4% 0 2%;
     color: #1a1a1a;
     font-size: 1.1rem;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_shopping {
         padding: 40px 0 20px;
         font-size: 1.6rem;
     }
 }
-
 .page_top .content_shopping .shopping_card {
     width: 56%;
 }
-
 .page_top .content_shopping .shopping-inner {
     margin-bottom: 3%;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_shopping .shopping-inner {
         margin-bottom: 30px;
     }
 }
-
 .page_top .content_shopping h2 {
     background-color: #EFE7BC;
     padding: 0.5em;
@@ -820,50 +837,40 @@ footer address {
     font-size: 1.2rem;
     font-weight: 700;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_shopping h2 {
         font-size: 2.0rem;
     }
 }
-
 .page_top .content_shopping ul li {
     padding-left: 1em;
     margin-bottom: 0.5em;
     line-height: 1.5;
 }
-
 .page_top .content_shopping ul li::before {
     margin-left: -1em;
 }
-
 .page_top .content_shopping ul.list_circle li::before {
     content: '◯';
 }
-
 .page_top .content_shopping ul.list_caution li::before {
     content: '※';
 }
-
 .page_top .content_shopping ul.list_dia li::before {
     content: '◆';
 }
-
 .page_top .content_shopping .shopping_bank {
     border: 2px dotted #cccccc;
     padding: 1em;
     margin-bottom: 1em;
 }
-
 @media screen and (min-width: 768px) {
     .page_top .content_shopping .shopping_bank {
         border: 1px dotted #cccccc;
     }
 }
 
-
 /* お申し込みボタンブロック */
-
 
 /* .content_entry {
   background: -moz-linear-gradient(50% 100% 90deg, #c9ddbf 26.7%, rgba(247, 196, 152, 0.5) 78.17%, rgba(247, 196, 152, 0) 100%);
@@ -875,22 +882,18 @@ footer address {
   background: linear-gradient(0deg, rgb(201 221 191) 26.7%, rgb(247 196 152 / 50%) 78.17%, rgb(247 196 152 / 100%) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F7C498',endColorstr='#C9DDBF' , GradientType=0);
   } */
-
 .content_entry_flex {
     display: flex;
     justify-content: space-between;
 }
-
 .content_entry_left {
     padding-right: 2%;
     font-size: 5em;
 }
-
 .content_entry_right {
     padding-left: 2%;
     font-size: 5em;
 }
-
 .content_btn_p {
     letter-spacing: 0;
     font-size: 1.5rem;
@@ -898,34 +901,28 @@ footer address {
     margin-bottom: -14%;
     font-weight: bold;
 }
-
 @media screen and (min-width: 768px) {
     .content_btn_p {
         font-size: 2.2rem;
     }
 }
-
 .content_btn_p .small {
     font-size: 1rem;
 }
-
 @media screen and (min-width: 768px) {
     .content_btn_p .small {
         font-size: 1.8rem;
     }
 }
-
 .content_entry .content_entry-inner {
     padding: 5% 0 5%;
     text-align: center;
 }
-
 @media screen and (min-width: 768px) {
     .content_entry .content_entry-inner {
         padding: 40px 0 46px;
     }
 }
-
 .content_entry h2 {
     color: #77001A;
     margin: 0.25em auto 0.5em;
@@ -933,17 +930,14 @@ footer address {
     font-size: 2.0rem;
     font-weight: 900;
 }
-
 @media screen and (min-width: 768px) {
     .content_entry h2 {
         font-size: 3.8rem;
     }
 }
-
 .content_entry .btn_link-entry {
     margin-bottom: 5%;
 }
-
 .btn_link-entry a {
     display: block;
     background-color: #B1001E;
@@ -958,7 +952,6 @@ footer address {
     letter-spacing: 0.05em;
     font-size: 1.8rem;
 }
-
 @media screen and (min-width: 768px) {
     .content_entry .btn_link-entry a {
         font-size: 3.2rem;
@@ -967,7 +960,6 @@ footer address {
         letter-spacing: 0.1em;
     }
 }
-
 .btn_link-entry a>span {
     padding-right: 30px;
     background: url("../images/common/ico_cart-01.svg") no-repeat center right;
@@ -977,7 +969,6 @@ footer address {
     font-size: 2rem;
     padding-right: 24px;
 }
-
 @media screen and (min-width: 768px) {
     .btn_link-entry a>span {
         padding-right: 52px;
@@ -985,14 +976,13 @@ footer address {
         font-size: 3rem;
     }
 }
-
 .btn_link-entry a:active {
     -webkit-transform: translateY(5px);
     transform: translateY(5px);
     /*下に動く*/
+    
     box-shadow: none;
 }
-
 @media screen and (min-width: 768px) {
     .btn_link-entry a:active {
         -webkit-transform: translateY(10px);
@@ -1000,16 +990,15 @@ footer address {
         /*下に動く*/
     }
 }
-
 .btn_link-entry a:hover {
     cursor: pointer;
     opacity: 1;
     -webkit-transform: translateY(5px);
     transform: translateY(5px);
     /*下に動く*/
+    
     box-shadow: none;
 }
-
 @media screen and (min-width: 768px) {
     .btn_link-entry a:hover {
         -webkit-transform: translateY(10px);
@@ -1017,33 +1006,27 @@ footer address {
         /*下に動く*/
     }
 }
-
 .btn_link-tel {
     margin-bottom: 3%;
 }
-
 .btn_link-tel a {
     display: block;
     line-height: 1;
 }
-
 .btn_link-tel a img {
     width: 100%;
     text-align: center;
     line-height: 1;
 }
-
 @media screen and (min-width: 768px) {
     .btn_link-tel a:hover {
         opacity: 1;
     }
 }
-
 .content_entry .txt-caution {
     color: #333;
     font-size: 1.8rem;
 }
-
 @media screen and (max-width: 768px) {
     .content_entry .txt-caution {
         font-size: 1.1rem;
